lab1/Test/L1-A-8-9.cmm
float ;
int f49Jch4MAv ( ) {
  return tzozwh ;
}
int ;
int Gb ( struct {
  int EWVs6bDHY8 ;
  int ivk4Mlv32nOV5s , dnUtNNVrQr_AF9Wj ;
  struct B0Rs dCdQfd = ek = Dksmmk4KkMjufbKJXLE5 && 
    nrMe1YZuQhd8ePNkI28p < opTBarqzlOXsUNyAK - KkhreJdQ8igBWqpT2 
    * ! - dWA_j1e2xRdpEvy ( EGRs1 ! , JmOMXHtFBVkOj8_yPdL 
    = fMXE = uCeHDqkuyPb2jEb0cf = Fd_qUNs_1ebvuVT3qHqo 
    = RH9rqjRLFva7 = bS || xxmkgIzDosYasZlRJ <= esijZh9NXqYRhgBpVUT 
    / SkxqBLG9p [ Funp6nu7yhRicxmI ( oV7TgHNF1idOeXjECdA7 
    != n6rft ( kCdoQtSFJRG2q >= m / gdvIK18CrG17 [ nVqgab1VTNdu0 
    && UB0cf5ZutBQizNfIe == ZVi7XcDVkvWJA9t + LEd0YIfl 
    * - HiqsWQ8CMZxIaP8JeY [ J9b > WfTLMsi * khduu2moZz 
    [ ! - N [ XSQr2s5zyBahrZ5wcx = kw4o31U0 > ( wA9_xw7zLyMRXtva9Pz 
    || GsjgD9eoq87cC <= - QN [ SQlNShT > W63 - 726155766 
    ] ) ] ] ] . udq50OpZl8L5uH ] * ! - 352063042.43694256 
    ) ) . blvOCJ ] . x8ISMP6oeXeB_QNN + vZ0q1EzANRTVDF72Nj2t 
    ( ) / ! uJisvkZWnzkmcTo ) ;
}Ykptn2pcYu1C3jN7 [ 656284917 ] ) {
}
int Sk 
;
int vrQz8v ( int WWbyZGrSJNq8Su2wjYaf , int yl ) {
  struct {
    struct dTusfpQTNu {
    }tbYKOCcYOwIX0Qye ;
  }UWcA ;
  int SBW__hlVbYSNpHE ;
  int FGhdVq4RC9PmC ;
  if ( cgjMh5B6Ypi4KMvnHB )   fGnSSdYoHrOC ;
else   if ( wZaWT ) {
    int QnWN ;
  }

}
struct uud9xFN4MVIKl1Fnza ;
int ;
int . Ihoew8rCy ( ) {
  while ( kzOYC8Ed )   if ( osvfUQNyjcIEieRTF )   hnkVUAV 
    ;
else   J4adng6jVvWVJ7svyZg ;


}
int ;int 
int ;) 
> int v , lCrRvEm6vdEYyngC_q 

;
int ;
